--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url("components/cards.css");
+@import url("components/avatar.css");
+@import url("components/bars.css");
+
 body {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
@@ -27,53 +31,7 @@ body {
 .container {
   margin: 0 auto;
   width: 100%;
-}
-
-.box {
-  background-color: #fff;
-  width: 50%;
-  margin: 20 auto;
-  text-align: center;
-  padding: 5 70 10 70;
-  box-shadow: 3px 3px 3px rgba(200, 200, 200, 0.1);
-}
-
-h1 {
-  color: #DB5461;
-  font-family: 'Raleway', sans-serif;
-  font-size: 30px;
-}
-
-h2 {
-  font-size: 20px;
-}
-
-h3 {
-  color: #95818D;
-  font-family: 'Raleway', sans-serif;
-  font-size: 20px;
-}
-
-a {
-  text-decoration: none;
-  color: rgb(110,127,128);
-}
-a:hover {
-  color: #000;
-}
-
-.img_round {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  padding: 0 20 20 20;
-}
-
-.btn_social {
-  list-style: none;
-  margin: none;
-  display: inline-block;
-  font-size: 40px;
+  position: relative;
 }
 
 .btn_pink {
@@ -92,3 +50,4 @@ ul {
   padding: 0;
   margin: 0;
 }
+
